# autotest

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENCE  README.md  README_DIAGRAM.md  diagram.mmd  docker-compose.dev.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 18141fc701fd_screenshot_and_video_columns.py  e4f6d47be7f3_initial.py  e6a59a9f38ca_artifact_keys_colunms.py
app/: dependencies.py  exceptions.py  main.py  uow.py
app/artifacts/: artifacts_service.py  factory.py  keys.py  local_fs.py  minio_storage.py  storage.py
app/clients/: minio_client.py
app/core/: config.py  logging.py
app/llm/: llm_output_validator.py  ollama_client.py  utils.py
app/models/: enums.py  models.py
app/query/: filters.py
app/queue/: redis_consumer.py  redis_queue.py
app/repositories/: dto.py  query_builder.py  repositories.py
app/routers/: plan_proposals.py  test_case_revisions.py  test_cases.py  test_run_artifacts.py  test_runs.py
app/schemas/: schemas.py
app/workers/: db.py  llm_worker.py  run_test_worker.py
app/workers/test_runner/: artifacts.py  dto.py  patterns.py  playwright_run.py  renderer.py  validators.py
tests/: conftest.py  test_artifacts.py  test_plan_proposals_api.py  test_test_cases_api.py  test_test_runs_api.py
tests/data/: data_llm_worker.py  data_plan_payload_dto.py  data_plan_validator.py  data_proposals.py  data_renderer.py  data_test_case.py  data_test_run.py
tests/workers/: helper_llm_worker.py  test_llm_plan_validator.py  test_llm_worker.py  test_parse_placeholders.py  test_plan_payload_dto.py  test_plan_renderer.py  test_playwright_runner.py  test_test_runner.py
